# starryAssistant

./: # CosyVoice在Google Colab上的可行性分析.ini  .gitattributes  .gitignore  0001-20250913.patch  DEVICE_CONTROL_INTEGRATION.md  TASK_SUMMARY.md  TTS_DEBUG_GUIDE.md  VAD_FIX_SUMMARY.md  build.gradle.kts  check_models.sh  copy_handsfree_models.sh  gradle.properties  openWakeWord.code-workspace  run.sh  settings.gradle.kts  test_sherpa_integration.sh  test_wake_word_integration.sh  withModels.sh
app/: build.gradle.kts
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  opus_jni.cpp  opus_jni_stub.cpp
doc/: 01-项目架构总览.md  02-技能系统详解.md  03-UI界面详解.md  04-语音处理系统.md  05-数据存储与配置管理.md  06-依赖注入与模块化设计.md  07-性能优化与最佳实践.md  08-开发指南与扩展.md  09-模型下载与语言支持分析.md  10-预打包模型使用指南.md  12-模型兼容性验证结果.md  13-TTS问题诊断与解决方案.md  14-语音识别问题诊断.md  15-唤醒功能调试指南.md  16-语音唤醒功能完整技术实现.md  17-韩语唤醒词制作指南.md  18-制作唤醒词数据推荐方法.md  18-状态转换机制分析.md  19-多唤醒技术集成指南.md  20-SherpaOnnx韩语唤醒词定制指南.md  21-SherpaOnnx韩语唤醒词完整集成指南.md  22-GPT-sherpaOnnx定制韩语唤醒词.md  23-SherpaOnnx韩语唤醒词集成完成报告.md  24-生成韩语唤醒词训练数据.md  25-AI提示词汇总.md  26-MCP协议微服务架构设计.md  27-悬浮窗能量球UI设计01.md  28-场景驱动的AudioResourceCoordinator优化分析.md  29-音频Pipeline优化设计方案.md  30-架构优化设计-服务化与混合模式.md  31-WebSocket集成设计文档.md  32-Android存储访问最佳实践.md  32-Opus音频编解码器适配分析.md  33-Opus适配风险与缺点分析.md  34-HiNudge韩语ONNX唤醒词集成报告.md  35-HiNudge集成验证报告.md  FLOATING_UI_GUIDE.md  HINUDGE_V8_SETUP_GUIDE.md  README.md  SENSEVOICE_ENERGY_DETECTION_FIX.md  (+21 more)
gradle/: libs.versions.toml
scripts/: AUDIO_PIPELINE_OPTIMIZATION_PLAN.md  FLOATING_ASSISTANT_IMPLEMENTATION_SUMMARY.md  HINUDGE_ONNX_USAGE_GUIDE.md  (+50 more)
(+177 files in other folders)
